# app_rust

./: .env  Cargo.toml  Dockerfile  Dockerfile_old  README.md  SYSTEM_STATUS.md  compose.yaml_  docker-compose.yml  docker-sec-check.sh  editor_exemplo.html  entrypoint.sh  gerar_hash_senha.py  outros.txt  test.txt  test_flash_messages.html  test_session.rs  test_session_simple.rs  validador_cnpj_novo.txt
app/: Cargo.toml
app/src/: main.rs  middlewares.rs
app/src/chamado/: enums.rs  filters.rs  mod.rs  model.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
app/src/core/: handler.rs  mod.rs  model.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
app/src/externo/: enums.rs  filters.rs  mod.rs  model.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
app/src/filters/: array.rs  datetime.rs  mod.rs  number.rs  string.rs
app/src/permissao/: mod.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
app/src/permissao/model/: mod.rs  module.rs
app/src/utils/: serde_utils.rs  validator.rs
app/tests/: db_test.rs  hello_world_test.rs  login_test.rs  mod.rs
app/tests/externo/: create_contato_pronaf_test.rs  mod.rs
migrations/: 20250806123410_create_permissao_module_table.sql  20250808182109_init_permisssao_permission.sql  20250814161351_permissao_create_table_role_perfil.sql  20250814174405_usuario_table.sql  20250817115640_alterar_campo_users.sql  20250821120905_add_role_permission_e_user_roles.sql  20250824010242_tipo_chamado.sql  20250825152617_uf_municipio.sql  20250825190344_alter_chamado.sql  20250826153820_alter_campo_descricao_chamado.sql  20250901202830_contato_cliente_externo.sql  20250903181629_alter_contato_add_campo.sql  20250912183033_add_tabela_regiao.sql
permissao/: Cargo.toml
permissao/src/: handler.rs  lib.rs  model.rs  repository.rs  router.rs  schema.rs  service.rs  view.rs
permissao/src/model/: mod.rs  module.rs  permission.rs
shared/: Cargo.toml
shared/src/: error.rs  generic_list.rs  helpers.rs  lib.rs  repository.rs  state.rs
templates/:  login.html  403.html  404.html  base.html  index.html  login.html  menu.html
templates/chamado/: atendimento_chamado.html  categoria_form.html  categoria_list.html  chamado_form.html  chamado_list.html  servico_form.html  servico_list.html  tipo_form.html  tipo_list.html
templates/components/: cidades_br.html  cidades_to.html  combobox.html  components.txt  endereco_cep.html  icons_svg.html  macros.html  modal.html  modulo.html  perfil.html  permissao.html  usuario.html
templates/core/: municipio_list.html
templates/externo/: contato_form.html  contato_form_pronaf_b.html  contato_list.html  linha_form.html  linha_list.html  linha_user.html  regiao_form.html  regiao_gestao.html  regiao_list.html  regiao_user.html
templates/externo/parts/: contato_form.js  contato_form_pronaf_b.js  pronaf_b.html
templates/permissao/: modulo.html  modulo_form.html  modulo_list.html  perfil_form.html  perfil_gestao.html  perfil_list.html  perfil_usuario.html  permission_form.html  permission_list.html  user_form.html  user_list.html
templates/permissao/parts/: modal_senha.html  user_modal_senha.html
templates/settings/: senha_form.html
templates/shared/: generic_list.html
