[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
blog = {path="../blog"}
permissao = {path="../permissao"}
shared = {path="../shared"}
axum = "0.8"
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["trace", "metrics", "fs"] }
prometheus = "0.13"
minijinja = { version = "2.11", features = ["loader"] }
dotenv = "0.15"
chrono = {version = "0.4", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1"
sqlx-cli = { version = "0.8", default-features = false, features = ["rustls", "postgres"] }
