[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
blog = {path="../blog"}
shared = {path="../shared"}
# Web framework
axum = "0.8"

tower-sessions = { version = "0.13"}

tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["trace", "metrics", "fs", "cors"] }
prometheus = "0.13"
minijinja = { version = "2.11", features = ["loader"] }
dotenv = "0.15"
chrono = {version = "0.4", features = ["serde"] }

uuid = { version = "1.17", features = ["serde", "v4"] }

otpauth = "0.5"
password-hash = "0.5"
chrono-tz = "0.10"
rand_core = "0.9"
argon2 = "0.5"
base32 = "0.5"
rand = "0.9"

validator = { version = "0.20", features = ["derive"] }
regex = "1.10.6"
async-trait = "0.1"
anyhow = "1.0"

qrcode = "0.14"
image = "0.25"
base64 = "0.22"

time = { version = "0.3", features = ["formatting"] }
percent-encoding = "2.3"
jsonwebtoken = "9.2"

urlencoding = "2.1"

reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1"
sqlx-cli = { version = "0.8", default-features = false, features = ["rustls", "postgres"] }

