[package]
name = "permissao"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
minijinja = { version = "2.11", features = ["loader"] }
axum = "0.8"
chrono = {version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.6"