[package]
name = "permissao"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
minijinja = { version = "2.11", features = ["loader"] }
# Web framework
axum = "0.8"

tower-sessions = { version = "0.13"}
urlencoding = "2.1"

tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = {version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.17", features = ["serde", "v4"] }


validator = { version = "0.18.1", features = ["derive"] }
regex = "1.10.6"
async-trait = "0.1"