[package]
name = "permissao"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
minijinja = { version = "2.11", features = ["loader"] }
# Web framework
axum = "0.8"

tower-sessions = { version = "0.13"}
urlencoding = "2.1"

tokio = { version = "1.45", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
chrono = {version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "ipnetwork", "uuid"] }
ipnetwork = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.17", features = ["serde", "v4"] }

otpauth = "0.5"
password-hash = "0.5"
chrono-tz = "0.10"
rand_core = "0.9"
argon2 = "0.5"
base32 = "0.5"
rand = "0.9"

validator = { version = "0.20", features = ["derive"] }
regex = "1.10.6"
async-trait = "0.1"
anyhow = "1.0"