[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.8"
tower-sessions = { version = "0.14"}
minijinja = { version = "2.11", features = ["loader"] }
urlencoding = "2.1"
async-trait = "0.1"

qrcode = "0.14"
image = "0.25"
base64 = "0.22"
anyhow = "1"

time = { version = "0.3", features = ["formatting"] }
percent-encoding = "2.3"
jsonwebtoken = "9.2"
